[gd_scene load_steps=10 format=3 uid="uid://bar4x73abvl8l"]

[ext_resource type="Script" path="res://levels/world.gd" id="1_nttnc"]
[ext_resource type="TileSet" uid="uid://gbjvwgm01oya" path="res://tilesets/planet_1_auto.tres" id="2_cthy5"]
[ext_resource type="PackedScene" uid="uid://b4x1gpv5mw085" path="res://ui/death_menu.tscn" id="2_w8u1c"]
[ext_resource type="PackedScene" uid="uid://67p7hb5inb7g" path="res://levels/main_cam.tscn" id="3_7qbx8"]
[ext_resource type="Script" path="res://levels/world_tile_map.gd" id="3_kkuux"]
[ext_resource type="PackedScene" uid="uid://ha6bgjgruhlu" path="res://ui/health_meter.tscn" id="3_o4ues"]
[ext_resource type="PackedScene" uid="uid://djf8xnljbt4pj" path="res://ui/pause_menu.tscn" id="4_kyxbp"]
[ext_resource type="PackedScene" uid="uid://bpund623gs2i5" path="res://player/player.tscn" id="4_wc625"]
[ext_resource type="PackedScene" uid="uid://bqk610wuxj0l2" path="res://items/ship_crashed.tscn" id="6_a8jps"]

[node name="world" type="Node2D"]
script = ExtResource("1_nttnc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="health_meter" parent="CanvasLayer" instance=ExtResource("3_o4ues")]
offset_left = 16.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(8, 8)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="DeathMenu" parent="CanvasLayer/CenterContainer" instance=ExtResource("2_w8u1c")]
visible = false
layout_mode = 2

[node name="PauseMenu" parent="CanvasLayer/CenterContainer" instance=ExtResource("4_kyxbp")]
visible = false
layout_mode = 2

[node name="help_text" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "dsad"
horizontal_alignment = 1

[node name="rooms" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="." groups=["tilemap"]]
tile_set = ExtResource("2_cthy5")
format = 2
script = ExtResource("3_kkuux")

[node name="main_cam" parent="." instance=ExtResource("3_7qbx8")]

[node name="player" parent="." instance=ExtResource("4_wc625")]

[node name="ship_crashed" parent="." instance=ExtResource("6_a8jps")]

[node name="enemies" type="Node2D" parent="."]

[node name="interactables" type="Node2D" parent="."]

[connection signal="player_dead" from="player" to="." method="_on_player_player_dead"]
[connection signal="ship_take_off" from="ship_crashed" to="." method="_on_ship_crashed_ship_take_off"]
